Se modifica gitignore para Angular

--- a/.gitignore
+++ b/.gitignore
@@ -551,3 +551,40 @@ modules.xml
 !.vscode/*.code-snippets
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,pycharm+all,pycharm+iml,visualstudiocode,intellij,intellij+all,intellij+iml
+
+
+# Created by https://www.toptal.com/developers/gitignore/api/angular
+# Edit at https://www.toptal.com/developers/gitignore?templates=angular
+
+### Angular ###
+## Angular ##
+# compiled output
+dist/
+tmp/
+app/**/*.js
+app/**/*.js.map
+
+# dependencies
+node_modules/
+bower_components/
+
+# IDEs and editors
+.idea/
+
+# misc
+.sass-cache/
+connect.lock/
+coverage/
+libpeerconnection.log/
+npm-debug.log
+testem.log
+typings/
+
+# e2e
+e2e/*.js
+e2e/*.map
+
+# System Files
+.DS_Store/
+
+# End of https://www.toptal.com/developers/gitignore/api/angular
