--- a/frontendTicketing/package.json
+++ b/frontendTicketing/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^4.5.0",
+    "bootstrap-icons": "^1.7.0",
     "jquery": "^3.5.1",
+    "material-icons": "^1.10.2",
     "ngx-cookie-service": "^13.0.0",
     "popper.js": "^1.14.3",
     "rxjs": "~7.4.0",
