--- a/frontendTicketing/package.json
+++ b/frontendTicketing/package.json
@@ -30,6 +30,7 @@
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.1.10",
     "tslib": "^2.3.0",
+    "webpack-sources": "^3.2.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
